--- a/html/index.html
+++ b/html/index.html
@@ -64,7 +64,7 @@
       </div>
 
       <!--Divider-->
-      <hr></hr>
+      <hr class="dropdown-divider">
 
       <!--Games and Players-->
       <div class="container">
@@ -83,7 +83,7 @@
       </div>
 
       <!--Divider-->
-      <hr></hr>
+      <hr class="dropdown-divider">
 
       <!--Random Game-->
       <center>
@@ -98,7 +98,7 @@
       </div>
 
       <!--Divider-->
-      <hr></hr>
+      <hr class="dropdown-divider">
 
       <!--Mehen Shop-->
       <center>
