--- a/sign/signIn.html
+++ b/sign/signIn.html
@@ -15,8 +15,35 @@
     <!-- Main Board -->
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 
-      
-
+        <!--SignIn form-->      
+      <div class="container mt-3">
+        <center>
+          <a class="nav-link me-0 px-3"><span style="color: black"><b>Sign In</b></span></a>
+        </center>
+      </div>
+      <div class="container mt-3">
+        <form>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Username</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="usernameHelp">
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+      <div class="container mt-3">
+        <div class="row">
+          <div class="col"><p align="left">
+            <a class="nav-link" href="registration.php">Registration</a>
+          </p></div>
+          <div class="col"><p align="right">
+            <a class="nav-link" href="fogotPassword.php">Fogot password</a>
+          </p></div>
+        </div>
+      </div>
 
         <!--Footer-->
 	<div class="container">
