--- a/sign/registration.html
+++ b/sign/registration.html
@@ -25,13 +25,15 @@
         <form>
           <div class="mb-3">
             <label for="inputUsername" class="form-label">Username</label>
-            <input type="email" class="form-control" id="inputUsername">
+            <input type="text" class="form-control" id="inputUsername" pattern="[0-9a-zA-Z]{6,20}" required>
+            <div id="usernameHelp" class="form-text" style="color: grey;">The username must be between 6 and 20 characters long and only contain the numbers [0-9] and the letters [a-z] in lowercase or [A-Z] in uppercase.</div>
           </div>
           <div class="mb-3">
             <label for="inputPassword" class="form-label">Password</label>
-            <input type="password" class="form-control" id="inputPassword">
+            <input type="password" class="form-control" id="inputPassword" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])[0-9a-zA-Z]{15}" required>
+            <div id="passwordHelp" class="form-text" style="color: grey;">The password must be 15 characters, get one of the numbers [0-9], one of the letters [a-z] in lower case and one of the letters [A-Z] in upper case.</div>
           </div>
-          <div class="mb-3">
+          <!--<div class="mb-3">
             <label class="form-label">Password strength check</label>
             <div class="progress">
               <div class="progress-bar bg-danger" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -45,13 +47,17 @@
             <div class="progress">
               <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-          </div>
+          </div>-->
           <div class="mb-3">
             <label for="inputEmail" class="form-label">Email</label>
-            <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+            <div class="input-group" id="inputEmail">
+              <input type="text" class="form-control" id="inputEmailName" required>
+              <span class="input-group-text" id="inputGroupPrepend2">@</span>
+              <input type="text" class="form-control" id="inputEmailDomain" required>
+            </div>
           </div>
           <p class="lead"><small>
-            Usernames in the Mehen Project are unique and consist of Arabic numerals and Latin letters in lower or upper case. It is not possible to create multiple accounts linked to the same email address. If you lose your password, we can recover it using the email address you provided during registration. By registering, you agree to be bound by our <a href="#" style="text-decoration: none;">User Agreement</a>. Check out our <a href="#" style="text-decoration: none;">Privacy Policy</a>.
+            It is not possible to create multiple accounts linked to the same username or email address. If you lose your password, we can recover it using the email address you provided during registration. By registering, you agree to be bound by our <a href="#" style="text-decoration: none;">User Agreement</a>. Check out our <a href="#" style="text-decoration: none;">Privacy Policy</a>.
           </small></p>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
