--- a/sign/thank_you_page.html
+++ b/sign/thank_you_page.html
@@ -14,26 +14,12 @@
     
     <!-- Main Board -->
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-
-        <!--SignOut form-->      
+    
+      <!--ThankYouPage form-->      
       <div class="container mt-3">
         <center>
-          <a class="nav-link me-0 px-3"><span style="color: black"><b>Are you sure you want to log out of your account?</b></span></a>
+          <a class="nav-link me-0 px-3"><span style="color: black"><b>Thank you, your account has been successfully verified!</b></span></a>
         </center>
-      </div>
-      <div class="container mt-3">
-        <form action="signOut.php" method="post">
-          <div class="container">
-            <div class="row">
-              <div class="col-auto me-auto">
-                <button type="submit" class="btn btn-primary">Sign Out</button>
-              </div>
-              <div class="col-auto">
-                <button type="button" class="btn btn-dark" onclick="location.href='/'">Cancel</button>
-              </div>
-            </div>
-          </div>
-        </form>
       </div>
 
         <!--Footer-->
