--- a/html/index.html
+++ b/html/index.html
@@ -159,30 +159,14 @@
 
 
         <!--Footer-->
-	<div class="container">
-	  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-	    <p class="col-md-4 mb-0 text-muted">MehenProject @ 2021 - 2022</p>
-
-	    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-	      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-	    </a>
-
-	    <ul class="nav col-md-4 justify-content-end">
-	      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-	      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-	      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-	      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-	      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-	    </ul>
-	  </footer>
-	</div>
+	<?php require "block/footer.php" ?>
 
     </main>
   </div>
 </div>
 
 <script src="https://getbootstrap.com/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="js/mehen_board.js"></script>
+<!--<script src="js/mehen_board.js"></script>-->
 
 </body>
 
