--- a/sign/fogotPassword.html
+++ b/sign/fogotPassword.html
@@ -31,42 +31,37 @@
       color: red;
     }
     </style>
-      <!--Registration form-->      
+      <!--Fogot Accaunt form-->      
       <div class="container mt-3">
         <center>
-          <a class="nav-link me-0 px-3"><span style="color: black"><b>Registration</b></span></a>
+          <a class="nav-link me-0 px-3"><span style="color: black"><b>Write your username and email address</b></span></a>
         </center>
       </div>
       <div class="container mt-3">
-        <form action="registration.php" method="post">
+        <form action="send_password_for_email.php" method="post">
           <div class="mb-3">
             <label for="inputUsername" class="form-label">Username</label>
-            <input type="text" class="form-control" id="inputUsername" name="inputUsername" pattern="(?!^admin$)(?!^mehen$)(?!^<?php if ($showUsernameHelp == 'true') {echo $inputUsername;};?>$)[0-9a-zA-Z]{5,20}" value="<?php if ($inputUsername) {echo $inputUsername;};?>" required>
+            <input type="text" class="form-control" id="inputUsername" name="inputUsername" pattern="(?!^admin$)(?!^mehen$)[0-9a-zA-Z]{5,20}" required>
             <div id="usernameHelp" class="form-text" style="color: grey;">The username must be unique. The username must be between 6 and 20 characters long and only contain the numbers [0-9] and the letters [a-z] in lowercase or [A-Z] in uppercase.</div>
           </div>
           <div class="mb-3">
-            <label for="inputPassword" class="form-label">Password</label>
-            <input type="password" class="form-control" id="inputPassword" name="inputPassword" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])[0-9a-zA-Z]{15}" required>
-            <div id="passwordHelp" class="form-text" style="color: grey;">The password must be 15 characters, get one of the numbers [0-9], one of the letters [a-z] in lower case and one of the letters [A-Z] in upper case.</div>
-          </div>
-          <div class="mb-3">
             <label for="inputEmail" class="form-label">Email</label>
-            <input type="text" class="form-control" id="inputEmail" name="inputEmail" pattern="(?!^<?php if ($showEmailHelp == 'true') {echo $inputEmail;};?>$)(^.{1,}@.{1,}$)" value="<?php if ($inputEmail) {echo $inputEmail;};?>" required>
+            <input type="text" class="form-control" id="inputEmail" name="inputEmail" pattern="(^.{1,}@.{1,}$)" required>
             <div id="emailHelp" class="form-text" style="color: grey;">It is not possible to create multiple accounts linked to the same username or email address. If you lose your password, we can recover it using the email address you provided during registration. By registering, you agree to be bound by our <a href="#" style="text-decoration: none;">User Agreement</a>. Check out our <a href="#" style="text-decoration: none;">Privacy Policy</a>.</div>
          </div>
           <!--<p class="lead"><small>
             It is not possible to create multiple accounts linked to the same username or email address. If you lose your password, we can recover it using the email address you provided during registration. By registering, you agree to be bound by our <a href="#" style="text-decoration: none;">User Agreement</a>. Check out our <a href="#" style="text-decoration: none;">Privacy Policy</a>.
           </small></p>-->
-          <button type="submit" class="btn btn-primary">Register</button>
+          <button type="submit" class="btn btn-primary">Send email with password</button>
         </form>
       </div>
       <div class="container mt-3">
         <div class="row">
           <div class="col"><p align="left">
-            <a class="nav-link" href="sign.php">Already have an account?</a>
+            <a class="nav-link" href="sign.php">I remembered!</a>
           </p></div>
           <div class="col"><p align="right">
-            <a class="nav-link" href="fogotPassword.php">Fogot password</a>
+            <a class="nav-link" href="registration.php">Registration</a>
           </p></div>
         </div>
       </div>
