--- a/sign/signIn.html
+++ b/sign/signIn.html
@@ -14,7 +14,20 @@
     
     <!-- Main Board -->
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-
+    <style>
+    #inputUsername:invalid {
+      color: red;
+    }
+    #inputUsername:valid {
+      color: green;
+    }
+    #inputPassword:invalid {
+      color: red;
+    }
+    #inputPassword:valid {
+      color: green;
+    }
+    </style>
         <!--SignIn form-->      
       <div class="container mt-3">
         <center>
@@ -22,16 +35,18 @@
         </center>
       </div>
       <div class="container mt-3">
-        <form>
+        <form action="signIn.php" method="post">
           <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Username</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="usernameHelp">
+            <label for="inputUsername" class="form-label">Username</label>
+            <input type="text" class="form-control" id="inputUsername" name="inputUsername" pattern="[0-9a-zA-Z]{5,20}"" required>
+            <div id="usernameHelp" class="form-text" style="color: grey;">The username must be unique. The username must be between 5 and 20 characters long and only contain the numbers [0-9] and the letters [a-z] in lowercase or [A-Z] in uppercase.</div>
           </div>
           <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <label for="inputPassword" class="form-label">Password</label>
+            <input type="password" class="form-control" id="inputPassword" name="inputPassword" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])[0-9a-zA-Z]{15}" required>
+            <div id="passwordHelp" class="form-text" style="color: grey;">The password must be 15 characters, get one of the numbers [0-9], one of the letters [a-z] in lower case and one of the letters [A-Z] in upper case.</div>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary">Sing In</button>
         </form>
       </div>
       <div class="container mt-3">
